bevy_elf_macros/tests/ui/fail/with_spec_no_base_path.stderr
error: either `base_path = "base/path"` or `sub_path [= "sub/path"]` is required
 --> tests/ui/fail/with_spec_no_base_path.rs:7:11
  |
7 |     #[elf(with_spec(extension = "ron"))]
  |           ^^^^^^^^^
